# mindcraft

./: .env.example  .firebaserc  .gitignore  404.html  ACTIVE_TASK.md  ADMIN_VIEWS_TRANSCRIBE_LATEX_PLAN.md  AGENTS_QUICKSTART.md  AGENT_CLEANUP_HANDOFF.md  AGENT_RULEBOOK.md  ARCHITECTURE.md  BRAND_BOOK.md  CLAUDE.md  CLAUDE_HANDOFF.md  CODEX_BRIEF.md  CURSOR_HANDOVER.md  DASHBOARD_CONCEPT_ID_CONSISTENCY_FIX.md  DASHBOARD_LAYOUT_STANDARDIZATION.md  DASHBOARD_NOTEBOOK_SPEC.md  DEMO_MODE_SPEC.md  DEPLOY.md  DealsTermPaperRubric2026.xlsx  EEDI_LATEX_REINGEST_PLAN.md  EXTENSION_RECOMMEND.md  FABLE5_VISION.md  FORMAT_WEAKNESS_PLAN.md  GAP_MAP_VISION.md  HF_PLUGIN_RUNBOOK.md  HOTFIX_recommend_500.md  INGREDIENT_EVIDENCE_CONTRACT.md  INK_WORK_MODEL_PLAN.md  MindCraft_BETA_Deck.pptx  MindCraft_Viability_Research_Strategy.md  NEXT_BATCH_PLAN.md  PAPER_STANDARDIZATION_PLAN.md  PERSONALIZATION_WORK_EVIDENCE_PLAN.md  PIPELINE_MCQ_SPEC.md  QUICK_MEDIUM_BATCH_PLAN.md  README.md  REPO_CLEANUP_AUDIT.md  ROLE_LOCK_AND_EXAM_TARGETS_PLAN.md  (+26 more)
ml/: .env.local.example  .gcloudignore  Dockerfile  README_HF.md  deploy.sh  entrypoint.sh  pyproject.toml  requirements.txt  serve.py
ml/data/: .em_dash_rewrite_cache.json  act_ontology_question_bank_audit.json  bank_index.npz  bank_index_meta.json  concept_embeddings.npz  eedi_misconception_frequency.json  eedi_misconceptions.json  enrich_report.json  exam_curricula.json  generated_questions.json  generated_questions.verify_report.json  ingredient_ontology.json  ingredient_ontology_template.json  misconception_ingredient_map.json  ontology.json  (+9 more)
(+608 files in other folders)
