[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mindcraft-graph"
version = "0.1.0"
description = "Per-student knowledge graph and recommendation engine for MindCraft"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Blake" },
]

dependencies = [
    "pydantic>=2.5.0",
    "networkx>=3.2",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
# Install with: pip install -e ".[ml]"
ml = [
    "torch>=2.1.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "sentence-transformers>=2.2.0",
]

# Install with: pip install -e ".[dev]"
dev = [
    "pytest>=7.4.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "jupyterlab>=4.0.0",
    "matplotlib>=3.8.0",
]

# Install with: pip install -e ".[viz]"
viz = [
    "streamlit>=1.28.0",
    "pyvis>=0.3.2",
]

# Install everything: pip install -e ".[all]"
all = [
    "mindcraft-graph[ml,dev,viz]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mindcraft_graph*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line length handled by black
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]